--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,69 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+    font-family: Poppins, sans-serif;
+    background-color: #1c1d20;
+    color: aliceblue;
+    margin-top: 10vh;
+    transition: all 0.3s ease;
+}
+
+.btn-wrapper {
+    /* flexbox */
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    transition: all 0.3s ease;
+}
+
+.btn {
+    color: rgb(255, 255, 255);
+    background-color: rgb(35, 137, 255);
+    border-radius: 5px;
+    border-style: none;
+    padding: .35rem 1rem .25rem 1rem;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    background-color: rgb(94, 169, 253);
+}
+
+.btn:active {
+    background-color: #d1e0fe;
+}
+
+.btn:focus {
+    outline: none;
+    border: black solid 2px;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #1c1d20;
+    width: 100%;
+    padding: .75rem;
+    font-size: 1.3rem;
+    border-style: solid;
+    border-color: aliceblue;
+    border-radius: 5px;
+    margin: 1rem 0;
+    transition: all 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: #444242;
+}
+
+.btn-primary:focus {
+    color: #000;
+    outline: none;
+    border: #000 solid 2px;
+    background-color: #d7ecff;
+}
+
+.btn-primary:active {
+    background-color: #212020;
+    transition: all 0.3s ease;
+}
