--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="main">
-  <h1>Mozilla Dev - My To Do List</h1>
+  <h1>Luan Robert 232750</h1>
+  <h1>Enzo Farias 231693</h1>
   <input class="lg-text-input" #campoNovoItem (keyup.enter)="CREATE_tarefa(campoNovoItem.value)"
     (keyup.enter)="campoNovoItem.value =''" />
   <button class="btn-primary" (click)="CREATE_tarefa(campoNovoItem.value)" (click)="campoNovoItem.value =''">
