--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="main">
-  <h1>Luan Robert 232750</h1>
-  <h1>Enzo Farias 231693</h1>
-  <input class="lg-text-input" #campoNovoItem (keyup.enter)="CREATE_tarefa(campoNovoItem.value)"
-    (keyup.enter)="campoNovoItem.value =''" />
-  <button class="btn-primary" (click)="CREATE_tarefa(campoNovoItem.value)" (click)="campoNovoItem.value =''">
+  <h1>Luiza Diegues - 188543</h1>
+  <input class="lg-text-input" (keydown.enter)="CREATE_tarefa(campoNovoItem.value)"
+    (keydown.enter)="campoNovoItem.value = ''" #campoNovoItem />
+  <button class="btn-primary" (click)="CREATE_tarefa(campoNovoItem.value)" (click)="campoNovoItem.value = ''">
     Adicionar Tarefa</button>
   <ul>
     <li *ngFor="let tarefaDoLoop of arrayDeTarefas">
-      <app-item [tarefa]="tarefaDoLoop" (removeItem)="REMOVER_tarefa ($event)"(modificaTarefa)="UPDATE_tarefa(tarefaDoLoop)"> </app-item>
+      <app-item [tarefa]="tarefaDoLoop" (removeTarefa)="DELETE_tarefa(tarefaDoLoop)"
+        (modificaTarefa)="UPDATE_tarefa(tarefaDoLoop)"></app-item>
     </li>
   </ul>
 </div>
