--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 body {
-    font-family: Poppins, sans-serif;
-    background-color: #1c1d20;
-    color: aliceblue;
-    margin-top: 10vh;
-    transition: all 0.3s ease;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .btn-wrapper {
@@ -13,21 +7,18 @@ body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    transition: all 0.3s ease;
 }
 
 .btn {
-    color: rgb(255, 255, 255);
-    background-color: rgb(35, 137, 255);
-    border-radius: 5px;
-    border-style: none;
+    color: #000000;
+    background-color: #fff;
+    border: 2px solid #cecece;
     padding: .35rem 1rem .25rem 1rem;
     font-size: 1rem;
-    transition: all 0.3s ease;
 }
 
 .btn:hover {
-    background-color: rgb(94, 169, 253);
+    background-color: #ecf2fd;
 }
 
 .btn:active {
@@ -40,30 +31,31 @@ body {
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #1c1d20;
+    color: #ffffff;
+    background-color: #8f4ea8;
     width: 100%;
     padding: .75rem;
     font-size: 1.3rem;
-    border-style: solid;
-    border-color: aliceblue;
-    border-radius: 5px;
+    border: none;
     margin: 1rem 0;
-    transition: all 0.3s ease;
+    font-weight: bold;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-primary:hover {
-    background-color: #444242;
+    background-color: #a762a7;
 }
 
 .btn-primary:focus {
     color: #000;
     outline: none;
     border: #000 solid 2px;
-    background-color: #d7ecff;
+    background-color: #a762a7;
 }
 
 .btn-primary:active {
     background-color: #212020;
-    transition: all 0.3s ease;
 }
