--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+textarea:focus, input:focus{
+    outline: none;
+}
+
 body {
     color: #4d4d4d;
     background-color: #f5f5f5;
@@ -10,7 +14,8 @@ body {
     margin: 2rem auto;
     padding: 1rem;
     text-align: center;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2), 0 2.5rem 5rem 0 rgba(0, 0, 0, .1);
+    background-color: #0a0a0a;
+    border: 1px solid aliceblue;
 }
 
 @media screen and (min-width: 600px) {
@@ -29,10 +34,12 @@ label {
 .lg-text-input {
     width: 100%;
     padding: 1rem;
-    border: 2px solid #000;
+    border: 1px solid aliceblue;
+    color: aliceblue;
+    background-color: #0a0a0a;
     display: block;
     box-sizing: border-box;
-    font-size: 1rem;
+    font-size: 2rem;
 }
 
 .btn-wrapper {
