--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -13,55 +13,72 @@
 .btn {
     /* menu buttons flexbox styles */
     flex-basis: 49%;
-    border-radius: 5px;
     font-weight: bold;
     padding: 0.6rem 0.5rem;
     font-size: 1rem;
 }
 
 .btn-save {
-    background-color: #000;
-    color: #fff;
-    border-color: #000;
+    background-color: #0a0a0a;
+    color: aliceblue;
+    border-color: aliceblue;
+    border-width: 1px;
 }
 
 .btn-save:hover {
-    background-color: #444242;
+    border-color: #0a0a0a;
 }
 
-.btn-save:focus {
-    background-color: #fff;
-    color: #000;
+.btn-edit {
+    background-color: #0a0a0a;
+    color: aliceblue;
+    border-color: aliceblue;
+    border-width: 1px;
+}
+
+.btn-edit:hover {
+    border-color: #0a0a0a;
 }
 
 .checkbox-wrapper {
     margin: .5rem 0;
 }
 
+.btn-cancel {
+    background-color: #0a0a0a;
+    color: aliceblue;
+    border-color: aliceblue;
+    border-width: 1px;
+}
+
+.btn-cancel:hover {
+    border-color: #0a0a0a;
+}
+
 .btn-warn {
-    background-color: #b90000;
+    background-color: #0a0a0a;
     color: #fff;
     border-color: #9a0000;
 }
 
 .btn-warn:hover {
-    background-color: #9a0000;
+    border-color: #0a0a0a;
 }
 
 .btn-warn:active {
-    background-color: #e30000;
-    border-color: #000;
+    background-color: #0a0a0a;
 }
 
 .sm-text-input {
     width: 100%;
     padding: .5rem;
-    border: 2px solid #555;
+    border: 1px solid aliceblue;
+    color: aliceblue;
     display: block;
     box-sizing: border-box;
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 1rem 0;
-    border-radius: 5px;
+    background-color: #0a0a0a;
 }
 
 .checkbox-wrapper {
@@ -89,22 +106,19 @@
     top: 0;
     width: 1.25em;
     height: 1.25em;
-    border: 2px solid #ccc;
-    background: #fff;
-    border-radius: 3px;
+    border: 1px solid aliceblue;
+    background: #0a0a0a;
 }
 
 [type="checkbox"]:not(:checked)+label:after,
 [type="checkbox"]:checked+label:after {
-    content: '\2713\0020';
+    content: '\2605';
     position: absolute;
     top: .15em;
     left: .22em;
     font-size: 1.3em;
     line-height: 0.8;
-    color: #0d8dee;
-    transition: all .2s;
-    font-family: 'Lucida Sans Unicode', 'Arial Unicode MS', Arial;
+    color: aliceblue;
     border-radius: 3px;
 }
 
@@ -116,9 +130,4 @@
 [type="checkbox"]:checked+label:after {
     opacity: 1;
     transform: scale(1);
-}
-
-[type="checkbox"]:checked:focus+label:before,
-[type="checkbox"]:not(:checked):focus+label:before {
-    border: 2px dotted blue;
 }
