--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -3,15 +3,15 @@
         (change)="tarefa.statusRealizada = !tarefa.statusRealizada; modificaTarefa.emit()" />
     <label [for]="tarefa.descricao">{{tarefa.descricao}}</label>
     <div *ngIf="!emEdicao" class="btn-wrapper">
-        <button class="btn" (click)="emEdicao = true ">Editar</button>
-        <button class="btn btn-warn" (click)="removeTarefa.emit()">Remover</button>
+        <button class="btn btn-edit" (click)="emEdicao = true ">Edit</button>
+        <button class="btn btn-warn" (click)="removeTarefa.emit()">Remove</button>
     </div>
     <div *ngIf="emEdicao">
         <input class="sm-text-input" #editedItem placeholder="Escreva o novo nome da tarefa 
    aqui" [value]="tarefa.descricao"
             (keydown.enter)="tarefa.descricao=editedItem.value; emEdicao = false; modificaTarefa.emit()">>
         <div class="btn-wrapper">
-            <button class="btn" (click)="emEdicao = false ">Cancelar</button>
+            <button class="btn btn-cancel" (click)="emEdicao = false ">Cancel</button>
             <button class="btn btn-save" (click)="tarefa.descricao=editedItem.value; emEdicao
    = false; modificaTarefa.emit()">Salvar</button>
         </div>
