--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -7,13 +7,12 @@
         <button class="btn btn-warn" (click)="removeTarefa.emit()">Remove</button>
     </div>
     <div *ngIf="emEdicao">
-        <input class="sm-text-input" #editedItem placeholder="Escreva o novo nome da tarefa 
-   aqui" [value]="tarefa.descricao"
+        <input class="sm-text-input" #editedItem placeholder="Edit" [value]="tarefa.descricao"
             (keydown.enter)="tarefa.descricao=editedItem.value; emEdicao = false; modificaTarefa.emit()">>
         <div class="btn-wrapper">
             <button class="btn btn-cancel" (click)="emEdicao = false ">Cancel</button>
             <button class="btn btn-save" (click)="tarefa.descricao=editedItem.value; emEdicao
-   = false; modificaTarefa.emit()">Salvar</button>
+   = false; modificaTarefa.emit()">Save</button>
         </div>
     </div>
 </div>
