--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,18 @@
     font-family: "DotGothic16", sans-serif;
 }
 
+::-webkit-scrollbar{
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+    background: #0a0a0a;
+}
+
+::-webkit-scrollbar-thumb {
+    background: aliceblue;
+}
+
 body {
     background-color: #0a0a0a;
     color: aliceblue;
@@ -14,6 +26,7 @@ body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .btn {
@@ -22,6 +35,32 @@ body {
     border: 2px solid #cecece;
     padding: .35rem 1rem .25rem 1rem;
     font-size: 1rem;
+    cursor: pointer;
+}
+
+#made{
+    font-size: 1rem;
+    font-weight: 100;
+}
+
+#title{
+    font-size: 4.5rem;
+    font-weight: lighter;
+    margin: -0.5rem;
+    margin-top: 1rem;
+    text-align: left;
+}
+
+#hello{
+    font-size: 2rem;
+    font-weight: lighter;
+    text-align: left;
+}
+
+#frase{
+    font-size: 1.2rem;
+    font-weight: lighter;
+    text-align: left;
 }
 
 .btn:hover {
@@ -45,15 +84,33 @@ body {
     padding: .75rem;
     font-size: 1.3rem;
     margin: 1rem 0;
-    font-weight: bold;
+    font-weight: 100;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    transition: none;
 }
 
-.btn-primary:hover {
-    border-color: #0a0a0a;
-}
+@keyframes borderAlt {
+    0% {
+      border-color: #0a0a0a;
+    }
+    50% {
+      border-color: aliceblue;
+    }
+    100% {
+      border-color: #0a0a0a;
+    }
+  }
+  
+  .btn-primary {
+    transition: none;
+  }
+  
+  .btn-primary:hover {
+    animation: borderAlt 1.5s steps(1) infinite;
+  }
 
 .btn-primary:active {
     border: 1px solid aliceblue;
