--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,7 +39,7 @@ label {
     background-color: #0a0a0a;
     display: block;
     box-sizing: border-box;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .btn-wrapper {
@@ -62,4 +62,11 @@ ul {
 
 ul li {
     list-style: none;
+}
+
+@media screen and (min-width: 600px) {
+    .lg-text-input {
+        font-size: 2rem;
+    }
+    
 }
